--- a/package.json
+++ b/package.json
@@ -5,6 +5,14 @@
   "homepage": ".",
   "dependencies": {
     "@reduxjs/toolkit": "^1.7.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
+    "react-scripts": "5.0.0",
+    "typescript": "~4.1.5",
+    "uuid": "^8.3.2"
+  },
+  "devDependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -13,13 +21,7 @@
     "@types/react": "^16.14.21",
     "@types/react-dom": "^16.9.14",
     "@types/react-redux": "^7.1.21",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-redux": "^7.2.6",
-    "react-scripts": "5.0.0",
-    "typescript": "~4.1.5"
-  },
-  "devDependencies": {
+    "@types/uuid": "^8.3.3",
     "sass": "^1.45.1"
   },
   "scripts": {
